# FastHETrace

./: CMakeLists.txt  README.md  build.sh  run_bench.sh
include/: argparse.hpp  automo_opt.hpp  csv2.hpp  global.h  hoist.hpp  stat.hpp  trace_keygen.hpp  types.hpp
include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  fwd.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h  tweakme.h  version.h
include/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
include/spdlog/details/: backtracer.h  circular_q.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg.h  log_msg_buffer.h  mpmc_blocking_q.h  os-inl.h  os.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h
include/spdlog/fmt/: bin_to_hex.h  fmt.h
include/spdlog/fmt/bundled/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  xchar.h
include/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink.h  stdout_color_sinks-inl.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
src/: CMakeLists.txt  bench_seq.cpp  bench_unroll.cpp
